# boil

./: Cargo.toml  README.md  change-ip.sh  install.sh  tg-bot.sh
src/: boil.rs  bot.rs  cli.rs  config.rs  core.rs  main.rs  service.rs  timer.rs
